// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformConfig handles false 1`] = `
{
  "dev": [
    [Function preset2DevTask1],
    {
      "name": "preset1DevTask1",
      "task": [Function preset1DevTask1],
    },
    {
      "name": "run jest",
      "task": "jest",
    },
    "eslint --fix",
    [
      {
        "name": "run prettier",
        "task": "prettier",
      },
      "eslint",
    ],
    [Function preset1DevTask2],
    [
      [Function preset1DevTask1],
      [Function preset1DevTask2],
    ],
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-01": "<PROJECT_ROOT>/node_modules/backtrack-preset-01",
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
  },
}
`;

exports[`transformConfig handles false in middle of long preset chain 1`] = `
{
  "dev": [
    "preset-06",
    "preset-05",
    "base",
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
    "backtrack-preset-05": "<PROJECT_ROOT>/node_modules/backtrack-preset-05",
    "backtrack-preset-06": "<PROJECT_ROOT>/node_modules/backtrack-preset-06",
    "backtrack-preset-07": "<PROJECT_ROOT>/node_modules/backtrack-preset-07",
  },
}
`;

exports[`transformConfig handles false in middle of preset chain 1`] = `
{
  "dev": [
    "base",
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-01": "<PROJECT_ROOT>/node_modules/backtrack-preset-03",
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
  },
}
`;

exports[`transformConfig handles false in middle of preset chain with additional task 1`] = `
{
  "dev": [
    "preset-04",
    "base",
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
    "backtrack-preset-04": "<PROJECT_ROOT>/node_modules/backtrack-preset-04",
  },
}
`;

exports[`transformConfig handles false with additional task 1`] = `
{
  "clean": {
    "copy": [],
    "del": [
      "static",
    ],
    "makeDirs": [],
  },
  "dev": [
    [Function preset2DevTask1],
    {
      "name": "preset1DevTask1",
      "task": [Function preset1DevTask1],
    },
    {
      "name": "run jest",
      "task": "jest",
    },
    "eslint --fix",
    [
      {
        "name": "run prettier",
        "task": "prettier",
      },
      "eslint",
    ],
    [Function preset1DevTask2],
    [
      [Function preset1DevTask1],
      [Function preset1DevTask2],
    ],
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-01": "<PROJECT_ROOT>/node_modules/backtrack-preset-01",
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
  },
}
`;

exports[`transformConfig handles one preset 1`] = `
{
  "clean": {
    "copy": [
      {
        "dest": "<PROJECT_ROOT>/dist/static-1",
        "src": "<PROJECT_ROOT>/static-1",
      },
      {
        "dest": "<PROJECT_ROOT>/dist/static-2",
        "hash": true,
        "src": "<PROJECT_ROOT>/static-2",
      },
      {
        "dest": "<PROJECT_ROOT>/dist/static-3",
        "src": "<PROJECT_ROOT>/static-3",
      },
    ],
    "del": [
      "nested",
      "**/*",
      "!.gitignore",
    ],
    "makeDirs": [
      "<PROJECT_ROOT>/dist/static/other",
      "<PROJECT_ROOT>/dist/static/favicons",
    ],
  },
  "dev": [
    [Function preset2DevTask1],
    {
      "name": "preset1DevTask1",
      "task": [Function preset1DevTask1],
    },
    {
      "name": "run jest",
      "task": "jest",
    },
    "eslint --fix",
    [
      {
        "name": "run prettier",
        "task": "prettier",
      },
      "eslint",
    ],
    [Function preset1DevTask2],
    [
      [Function preset1DevTask1],
      [Function preset1DevTask2],
    ],
    "base",
  ],
  "files": {
    "dest": {
      "absolute": {},
      "allowChanges": {},
      "files": [],
      "hash": {},
      "ignoreUpdates": {},
    },
    "makeDirs": [
      "dist",
      "src",
    ],
    "src": {
      "absolute": {},
      "files": [],
      "hash": {},
    },
  },
  "resolve": {
    "backtrack-preset-01": "<PROJECT_ROOT>/node_modules/backtrack-preset-01",
    "backtrack-preset-02": "<PROJECT_ROOT>/node_modules/backtrack-preset-02",
  },
}
`;
